# minimal-yaml

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bigfile.yaml  bors.toml
.github/workflows/: ci.yml
benches/: yaml_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: bytes.rs  errors.rs  lib.rs  parse.rs  tests.rs  tokenize.rs  yaml_test_suite.rs
src/tests/: macros.rs  mod.rs  tests.rs
src/tokenize/: mod.rs  tests.rs
