[package]
name = "minimal-yaml"
version = "0.1.0"
authors = ["nathanwhit <nathan.whitaker01@gmail.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0.104", features = ['derive'], optional = true}

[dev-dependencies]
paste = "0.1.6"
criterion = "0.3.1"
yaml-rust = "0.4.3"

[[bench]]
name = "yaml_bench"
harness = false

[lib]
bench = false