[package]
name = "minimal-yaml"
version = "0.1.1"
authors = ["Nathan Whitaker <nathan.whitaker01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A minimalist, zero-copy parser for a strict subset of the YAML specification."
readme = "README.md"
repository = "https://github.com/nathanwhit/minimal-yaml/"
homepage = "https://github.com/nathanwhit/minimal-yaml/"

[dependencies]

[dev-dependencies]
paste = "0.1.6"
testgen-minimal-yaml = {git = "https://github.com/nathanwhit/testgen-minimal-yaml"}
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"
